# wl-gammarelay-applet

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: main.rs
ui/: wl-gammarelay-applet.slint
