[package]
name = "wl-gammarelay-applet"
description = "Control wl-gammarelay-rs via applet."
authors = ["June Elva"]
edition = "2021"
version = "0.1.2"
build = "build.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
zbus = { version = "3.14.1", features = ["tokio"] }
tokio = { version = "1.35.1", features = ["full"] }
slint = { version = "1.3.2" }
thiserror = "1.0.56"

[build-dependencies]
slint-build = "1.0"

[package.metadata.bundle]
identifier = "com.github.junelva.wl-gammarelay-applet"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "fat"
